--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -22,7 +22,9 @@ button {
     color: white;
     font-size: 1em;
     border-radius: 3px;
-    transition: all 0.2s;
+    transition: all 0.1s;
+    box-shadow: 1px 1px 5px gray;
+    padding: 5px 8px;
 }
 
 button:hover {
@@ -32,6 +34,7 @@ button:hover {
 
 button:active {
     transform: translate(1px, 1px);
+    box-shadow: none;
 }
 
 /* Header */
@@ -62,7 +65,7 @@ button:active {
 }
 
 .user-block .user-name {
-    margin: 0 5px 0 0;
+    margin: 0 10px 0 0;
 }
 
 /* Game */
