--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -16,7 +16,7 @@ a:hover {
     color: dodgerblue;
 }
 
-button {
+button, .button {
     border: 1px solid lightgray;
     background-color: black;
     color: white;
@@ -25,14 +25,17 @@ button {
     transition: all 0.1s;
     box-shadow: 1px 1px 5px gray;
     padding: 5px 8px;
+    display: inline-block;
+    text-decoration: none;
 }
 
-button:hover {
+button:hover, .button:hover {
     border-color: dodgerblue;
+    color: white;
     cursor: pointer;
 }
 
-button:active {
+button:active, .button:active {
     transform: translate(1px, 1px);
     box-shadow: none;
 }
