--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -54,8 +54,8 @@ button:active, .button:active {
 
 .header {
     background-color: #000000;
-    padding: 0 10px;
-    height: 50px;
+    padding: 5px 10px;
+    height: 40px;
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -69,6 +69,31 @@ button:active, .button:active {
     color: dodgerblue;
 }
 
+.brand {
+    margin-right: 30px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.main-menu {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.main-menu a {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 5px;
+}
+
+.main-menu li:not(:last-child) {
+    border-right: 1px solid lightgray;
+}
+
 /* User Block */
 
 .user-block {
@@ -79,6 +104,20 @@ button:active, .button:active {
 
 .user-block .user-name {
     margin: 0 10px 0 0;
+}
+
+/* Game List */
+
+.game-list {
+    list-style: none;
+    padding: 0;
+}
+
+.game-list li {
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 /* Game */
