--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -18,6 +18,7 @@ h1 {
 }
 
 a {
+    color: black;
     text-decoration-color: dodgerblue;
     transition: all 0.2s;
 }
@@ -33,7 +34,7 @@ button, .button {
     font-size: 1em;
     border-radius: 3px;
     transition: all 0.2s;
-    box-shadow: 1px 1px 5px gray;
+    box-shadow: 1px 1px 5px 1px gray;
     padding: 5px 8px;
     display: inline-block;
     text-decoration: none;
@@ -41,12 +42,13 @@ button, .button {
 
 button:not(:disabled):hover, .button:hover {
     border-color: dodgerblue;
+    box-shadow: 0 0 5px 2px dodgerblue;
     color: white;
     cursor: pointer;
 }
 
 button:not(:disabled):active, .button:active {
-    transform: translate(1px, 1px);
+    transform: translate(0, 1px);
     box-shadow: none;
 }
 
@@ -73,18 +75,12 @@ button:disabled {
     align-items: center;
 }
 
-.header a {
-    color: lightgray;
-}
-
-.header a:hover {
-    color: dodgerblue;
-}
-
 .brand {
     margin-right: 30px;
     text-decoration: none;
     font-weight: bold;
+    color: dodgerblue;
+    text-shadow: 0 0 5px dodgerblue;
 }
 
 .main-menu {
@@ -99,7 +95,13 @@ button:disabled {
     display: flex;
     align-items: center;
     height: 100%;
-    padding: 0 5px;
+    padding: 0 10px;
+    color: lightgray;
+}
+
+.main-menu a:hover {
+    color: dodgerblue;
+    text-shadow: 0 0 5px dodgerblue;
 }
 
 .main-menu li:not(:last-child) {
@@ -149,7 +151,7 @@ button:disabled {
     padding: 30px;
     margin: 5px;
     width: 340px;
-    justify-content: center;
+    justify-content: space-around;
     cursor: pointer;
     transition: all 0.2s;
 }
@@ -161,10 +163,6 @@ button:disabled {
 
 .game-card-part {
     text-align: center;
-}
-
-.game-card-part:not(:last-child) {
-    margin-right: 50px;
 }
 
 .game-card-score {
