--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -4,11 +4,7 @@ body {
     font-size: 18px;
     margin: 0;
     padding: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-}
-
-main {
-    padding: 10px 30px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 h1 {
@@ -106,6 +102,51 @@ button:disabled {
 
 .main-menu li:not(:last-child) {
     border-right: 1px solid lightgray;
+}
+
+.container {
+    position: relative;
+    min-height: 96vh;
+    /*overflow: hidden;*/
+}
+
+/*@media TODO*/
+.side-panel {
+    z-index: 100;
+    position: absolute;
+    border-left: 4px solid dodgerblue;
+    background-color: #eeeeee;
+    padding: 10px 20px;
+    top: 0;
+    right: -450px;
+    height: 100%;
+    width: 400px;
+    overflow-y: auto;
+    transition: right 0.5s;
+}
+.side-panel-visible {
+    right: 0;
+}
+
+button.side-panel-button {
+    z-index: 100;
+    position: absolute;
+    right: -38px;
+    top: 50px;
+    transform: rotate(-90deg);
+    transition: right 0.5s;
+}
+
+button.side-panel-button:active {
+    transform: rotate(-90deg) translate(0, 1px);
+}
+
+button.side-panel-button-visible {
+    right: 405px;
+}
+
+.main {
+    padding: 10px 30px;
 }
 
 /* User Block */
