--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -186,14 +186,21 @@ button.side-panel-button-visible {
     justify-content: center;
 }
 
+.game-card-link {
+    text-decoration: none;
+    color: black;
+}
+
+.game-card-link:hover {
+    color: black;
+}
+
 .game-card {
-    display: flex;
     border: 1px solid black;
     border-radius: 3px;
     padding: 30px;
     margin: 5px;
     width: 340px;
-    justify-content: space-around;
     cursor: pointer;
     transition: all 0.2s;
 }
@@ -201,6 +208,11 @@ button.side-panel-button-visible {
 .game-card:hover {
     box-shadow: 1px 1px 5px gray;
     transform: translate(-1px, -1px);
+}
+
+.game-card-scores {
+    display: flex;
+    justify-content: space-around;
 }
 
 .game-card-part {
@@ -216,6 +228,11 @@ button.side-panel-button-visible {
 .game-card-player {
     margin: 0;
     font-weight: bold;
+}
+
+.game-card-header {
+    margin: 30px 0 0 0;
+    text-align: center;
 }
 
 /* Game */
