--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -384,6 +384,72 @@ button.side-panel-button-visible {
     border-radius: 0.5em;
     background-color: #eeeeee;
     box-shadow: 1px 1px 5px 1px #cccccc;
+    word-break: break-word;
+}
+
+.chat-message-my {
+    align-self: flex-end;
+}
+
+.chat-message-my .chat-message {
+    background-color: powderblue;
+}
+
+.chat-message-text {
+    margin: 0;
+}
+
+.chat-message-footer {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid gray;
+    margin: 0.5em 0 0;
+    padding-top: 0.5em;
+    font-size: 0.9em;
+    color: gray;
+}
+
+.chat-message-user {
+    margin: 0;
+    font-style: italic;
+}
+
+.chat-message-date {
+    margin: 0;
+}
+
+.chat-form {
+    display: flex;
+}
+
+.chat-form-input {
+    flex: 1;
+}
+
+/* Chat */
+
+.chat {
+    margin-bottom: 1em;
+}
+
+.chat-list {
+    border: 1px solid black;
+    list-style: none;
+    padding: 1em;
+    height: 500px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-message {
+    border: 2px solid rgb(189, 215, 255);
+    width: 20em;
+    padding: 1em;
+    margin: 0.5em 0;
+    border-radius: 0.5em;
+    background-color: #eeeeee;
+    box-shadow: 1px 1px 5px 1px #cccccc;
 }
 
 .chat-message-my {
