--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -74,11 +74,13 @@ input[type=text] {
 
 .warning-message {
     margin: 0;
+    color: white;
     background-color: #dc3545;
-    border: 1px solid #91232d;
+    border: 2px solid rgb(189, 215, 255);
     padding: 0.5em 1em;
-    border-radius: 3px;
+    border-radius: 0.5em;
     width: 100%;
+    box-shadow: 1px 1px 5px 1px #cccccc;
 }
 
 /* Player Block */
@@ -105,6 +107,28 @@ input[type=text] {
     font-size: 1.5em;
 }
 
+/* Spinner */
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid dodgerblue;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* Header */
 
 .header {
@@ -115,6 +139,7 @@ input[type=text] {
     display: flex;
     align-items: center;
     border-bottom: 4px solid dodgerblue;
+    box-shadow: 0 2px 8px gray;
 }
 
 .brand {
@@ -193,6 +218,7 @@ input[type=text] {
     overflow-y: auto;
     transition: right 0.5s;
 }
+
 .side-panel-visible {
     right: 0;
 }
@@ -530,35 +556,36 @@ button.side-panel-button-visible {
 /* Match Making Modal */
 
 .modal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 200;
 }
 
 .modal-content {
-  width: 500px;
-  background-color: #fff;
+    width: 500px;
+    background-color: #fff;
 }
 
 .modal-header,
 .modal-footer {
-  padding: 10px;
+    padding: 10px;
 }
 
 .modal-title {
-  margin: 0;
+    margin: 0;
 }
 
 .modal-body {
-  padding: 10px;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+    padding: 10px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
 }
 
 .modal-body-button-play {
@@ -566,21 +593,4 @@ button.side-panel-button-visible {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-
-/*spinner*/
-.loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid dodgerblue;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 2s linear infinite;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
 }
