--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -403,7 +403,60 @@ button.side-panel-button-visible {
     margin: 0.5em 0 0 0;
 }
 
-/* Completed game */
+/* Completed game list */
+
+.completed-game-list {
+    list-style: none;
+    padding: 0;
+}
+
+.completed-game-card {
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 5px;
+    transition: all 0.2s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.completed-game-card p {
+    margin: 0;
+}
+
+.completed-game-card:hover {
+    box-shadow: 1px 1px 5px gray;
+    transform: translate(-1px, -1px);
+}
+
+.completed-game-link {
+    text-decoration: none;
+    color: black;
+}
+
+.completed-game-link:hover {
+    color: black;
+}
+
+.completed-game-card-part {
+    display: flex;
+    align-items: center;
+}
+
+.completed-game-card-part *:not(:last-child) {
+    margin-right: 0.5em;
+}
+
+.completed-game-card-scores {
+    font-family: "Press Start 2P", sans-serif;
+}
+
+.completed-game-card-user {
+    font-weight: bold;
+}
+
+/* Completed game page */
 
 .completed-game-scores {
     display: flex;
