--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -13,6 +13,16 @@ h1 {
     text-decoration-color: dodgerblue;
 }
 
+h2 {
+    font-weight: normal;
+    background-color: dodgerblue;
+    display: table;
+    color: white;
+    padding: 0.1em;
+    font-size: 1.4em;
+    transform: skewX(-5deg);
+}
+
 a {
     color: black;
     text-decoration-color: dodgerblue;
