--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -83,6 +83,15 @@ input[type=text] {
     box-shadow: 1px 1px 5px 1px #cccccc;
 }
 
+.error-doge {
+    font-size: 0.5em;
+    text-align: center;
+}
+
+.error-doge::after {
+    content: "   ⣀⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⢠⣿⣿⣿⢿⣿⣶⣶⣶⣶⣶⣶⣤⣤⣤⣤⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⢀⣼⣿⣿⣿⣟⢶⣳⢮⣇⠿⣽⣿⣿⣿⣿⣟⣿⣿⣿⣶⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣠⣿⠟⣽⣿⣿⡞⢧⣏⡷⣎⠿⣽⣿⢿⣿⣿⢿⣷⣿⣞⣿⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣰⣿⡯⣼⣿⣿⡿⡘⢧⢚⣿⣾⡽⣹⢿⣿⣻⣿⣿⡟⣿⡟⣼⣿⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣿⣿⠃⣽⣿⢿⣇⣽⣾⣈⣻⣿⣿⣿⣿⢿⣟⣻⣿⣿⣿⣞⣽⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣼⣿⡏⣾⣿⣿⣿⣿⣿⣿⠿⢿⣿⣿⡟⡶⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⢻⠍⠀⠈⠙⠻⣿⣷⢫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⢀⣰⣿⣿⣿⣿⣿⢿⣿⣿⣷⡀⠀⠀⠀⠀⠀⠀⢀⠹⢿⣿⣿⣿⡷⣏⣾⢻⢧⡻⣽⢿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⡿⢁⢦⣼⣿⣿⣧⡀⠀⠀⠀⠀⠀⠀⠀⠀⡙⢿⣿⣿⣜⣷⣯⡳⣽⣿⣿⣻⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣶⠟⡛⣿⣿⣿⣿⣿⣶⠶⠖⠒⠀⠀⠀⠠⡐⡩⢿⣿⣿⣿⢷⣻⣷⣿⣳⣟⡾⣽⣻⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠈⠿⣿⣿⣿⣿⣿⣰⣮⣷⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠣⢥⣙⡿⣿⡿⣯⣿⣿⣿⣯⢷⢯⣟⣳⠿⣜⣻⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠙⠛⠛⠻⢿⣿⣿⣿⣿⡿⠟⠃⠀⠀⠀⠀⠀⠴⣘⢇⠺⣼⣳⣿⣿⣿⣿⣿⡿⣿⣛⡾⣭⢟⣽⡹⢶⣹⣿⣿⣄⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⢀⠰⣈⣞⣿⣿⣿⣿⢿⣿⣿⡿⣽⡳⢯⣷⣝⣾⢯⡟⣭⣷⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠀⠀⠀⠀⠀⢀⡀⠀⠀⠴⢾⢿⣿⣿⣿⣿⣿⣿⣿⡿⣏⢿⡱⣏⢯⡻⣟⠿⣧⣻⣿⣿⣿⣿⣿⣿⣆⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠀⠀⠀⠀⠀⠀⠉⢷⣌⠢⡍⢾⢻⡽⣻⣿⡿⡿⢧⡛⣜⢣⢛⡜⣲⢽⣸⣛⣶⣿⣿⣿⣿⣿⣿⣿⣿⣇⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣇⠀⠀⠀⠀⠀⠀⠀⠈⠻⢂⠉⢎⣳⡿⠟⡏⠱⡉⠆⠱⡈⢆⢣⡘⢬⣛⣶⣿⣿⣿⣿⣟⣷⣿⣿⣿⣻⣿⡀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⠟⠛⠀⠃⠀⠁⠀⠈⠄⡑⣈⢦⣽⣾⣿⣿⣿⢿⣻⣽⣿⣿⣿⡿⣞⣳⣿⣇⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠃⠀⠀⠀⠀⠀⠀⡄⣶⣜⣶⣿⣿⣿⠻⣝⡷⣿⣟⣿⣿⣿⣿⡿⣽⣏⡷⣿⣿⡄⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠠⡴⠶⠟⠊⠔⣰⠿⠏⠱⣈⠻⣼⣿⣿⢾⣿⣿⣿⣿⣽⣳⢾⣽⣿⣿⣿⡄⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠷⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠈⠀⠀⠀⠡⣀⣻⣿⣿⣯⣿⣿⣿⣿⡷⣯⣟⡿⣾⣿⣿⣿⣷⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡃⠘⢿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣶⣿⣿⣟⣷⣿⣿⣿⣿⣽⣳⣯⣿⣿⣿⣿⣿⣿⡄\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢿⣇⠀⠈⢿⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣼⣿⣿⢿⡼⣿⣿⣿⣿⢧⣏⣿⣹⣿⣿⣿⣿⣿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⢤⣦⣼⣿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀⠀⢢⣿⣿⡿⣯⣟⣿⣿⣿⣿⣟⡿⣾⣟⣿⣿⣿⣿⣿⢿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠠⠌⠻⣿⣿⣆⠀⠀⠀⠤⡀⠀⢀⠠⠀⡀⢀⠠⢄⣧⣿⣿⣿⣟⡷⣿⣻⣿⣿⣿⣽⣻⡷⣿⣿⣿⣿⣿⡿⣿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠄⢃⠐⡀⠻⣿⣧⣄⠀⠀⠙⠦⣄⢂⠡⠐⡠⣚⣾⣿⣿⣿⣻⢾⣟⣿⣿⣿⣿⡷⣯⣿⣽⣿⣽⣿⣿⣿⣿⣿⣿⠃\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠈⠤⡀⠀⠐⢻⡽⠿⣷⣤⠀⠀⠀⠀⢂⠱⣰⢻⣿⣿⣟⣳⢯⣿⣾⣿⣿⣿⣿⣟⣿⣞⣷⣿⣿⣿⣿⣿⣿⣿⡿⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠈⢼⠃⠀⠀⢨⣿⣷⣌⠏⡄⠡⢌⣲⣌⠙⠤⢋⣾⡿⡽⣯⣟⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣯⣿⣿⡿⠃⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⡅⠀⠀⠀⠀⣰⣿⣿⣿⣯⡙⣿⢆⣻⣿⡆⠌⡱⢾⣱⢟⣳⣟⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠁⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣾⣿⡇⠀⠀⠀⢠⣿⣿⣿⣿⣿⣶⢡⢋⡴⣿⣿⠀⠱⣯⢇⣻⡼⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠁⠀⠀⠀\A    ⠀⠀⠀⠀⢀⣀⣤⣴⣶⣿⣿⣿⣿⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣷⣾⣷⣽⣿⠀⠣⡜⢭⣖⡻⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀\A    ⠀⣠⣶⡿⢟⣿⣿⣿⣿⣿⣿⢿⣿⡄⠀⠀⢠⣿⣿⣿⣿⡿⢿⡏⢩⠉⡉⢻⣿⡅⠣⡜⣣⢞⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀\A    ⢰⣿⣿⣿⣿⣿⠿⠛⠉⠉⠀⢸⣿⡇⣾⣄⣿⣿⣿⣿⡯⢁⠃⠌⠂⠡⠀⠈⣿⣯⠐⡥⢳⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠉⠉⠉⠉⠀⠀⠀⠀⠀⢀⣾⡿⠁⡜⣿⣿⣿⣿⡿⠃⠁⠀⠀⠀⠀⠀⠐⣿⠃⡜⡸⢧⣿⣿⣿⣿⣿⣿⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⢀⣀⣤⣤⣶⡿⢋⠀⣹⣿⣿⣿⣿⣯⣥⣤⣤⣤⣤⣤⣤⣤⣼⣿⢐⡸⣓⢯⣿⣿⣿⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⣠⣴⣶⣿⢿⣿⣿⡿⠋⢁⢂⢐⣾⡿⠁⠉⠉⠉⠉⠉⠉⠉⠉⠙⠛⠛⠻⢿⣦⣱⡹⣾⣿⣿⣿⠏⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⣾⣿⣿⢏⣠⣾⠿⠋⠀⠀⠀⣦⣿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⡶⢿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠘⢿⣿⡟⣯⣀⠀⢀⣤⣰⣾⠟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣷⣯⣾⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠘⣿⣷⣸⣿⣶⣾⣼⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⢸⣿⣻⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠙⠛⠛⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⡿⢢⢷⣿⣿⡗⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⡏⢳⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⡿⢈⠱⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣇⢀⣲⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣯⣅⣺⣿⣿⠿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A      ⠉⠛⠛⡛⠉⠁";
+}
+
 /* Player Block */
 
 .avatar-placeholder-big {
