--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -83,13 +83,13 @@ input[type=text] {
     box-shadow: 1px 1px 5px 1px #cccccc;
 }
 
-.error-doge {
-    font-size: 0.5em;
+.error-art {
+    margin: 0;
     text-align: center;
 }
 
-.error-doge::after {
-    content: "   ⣀⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⢠⣿⣿⣿⢿⣿⣶⣶⣶⣶⣶⣶⣤⣤⣤⣤⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⢀⣼⣿⣿⣿⣟⢶⣳⢮⣇⠿⣽⣿⣿⣿⣿⣟⣿⣿⣿⣶⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣠⣿⠟⣽⣿⣿⡞⢧⣏⡷⣎⠿⣽⣿⢿⣿⣿⢿⣷⣿⣞⣿⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣰⣿⡯⣼⣿⣿⡿⡘⢧⢚⣿⣾⡽⣹⢿⣿⣻⣿⣿⡟⣿⡟⣼⣿⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A⠀⠀⠀⠀⠀⠀⠀⠀⠀   ⣿⣿⠃⣽⣿⢿⣇⣽⣾⣈⣻⣿⣿⣿⣿⢿⣟⣻⣿⣿⣿⣞⣽⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣼⣿⡏⣾⣿⣿⣿⣿⣿⣿⠿⢿⣿⣿⡟⡶⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⢻⠍⠀⠈⠙⠻⣿⣷⢫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⢀⣰⣿⣿⣿⣿⣿⢿⣿⣿⣷⡀⠀⠀⠀⠀⠀⠀⢀⠹⢿⣿⣿⣿⡷⣏⣾⢻⢧⡻⣽⢿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⡿⢁⢦⣼⣿⣿⣧⡀⠀⠀⠀⠀⠀⠀⠀⠀⡙⢿⣿⣿⣜⣷⣯⡳⣽⣿⣿⣻⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣶⠟⡛⣿⣿⣿⣿⣿⣶⠶⠖⠒⠀⠀⠀⠠⡐⡩⢿⣿⣿⣿⢷⣻⣷⣿⣳⣟⡾⣽⣻⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠈⠿⣿⣿⣿⣿⣿⣰⣮⣷⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠣⢥⣙⡿⣿⡿⣯⣿⣿⣿⣯⢷⢯⣟⣳⠿⣜⣻⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠙⠛⠛⠻⢿⣿⣿⣿⣿⡿⠟⠃⠀⠀⠀⠀⠀⠴⣘⢇⠺⣼⣳⣿⣿⣿⣿⣿⡿⣿⣛⡾⣭⢟⣽⡹⢶⣹⣿⣿⣄⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⢀⠰⣈⣞⣿⣿⣿⣿⢿⣿⣿⡿⣽⡳⢯⣷⣝⣾⢯⡟⣭⣷⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠀⠀⠀⠀⠀⢀⡀⠀⠀⠴⢾⢿⣿⣿⣿⣿⣿⣿⣿⡿⣏⢿⡱⣏⢯⡻⣟⠿⣧⣻⣿⣿⣿⣿⣿⣿⣆⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠀⠀⠀⠀⠀⠀⠉⢷⣌⠢⡍⢾⢻⡽⣻⣿⡿⡿⢧⡛⣜⢣⢛⡜⣲⢽⣸⣛⣶⣿⣿⣿⣿⣿⣿⣿⣿⣇⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣇⠀⠀⠀⠀⠀⠀⠀⠈⠻⢂⠉⢎⣳⡿⠟⡏⠱⡉⠆⠱⡈⢆⢣⡘⢬⣛⣶⣿⣿⣿⣿⣟⣷⣿⣿⣿⣻⣿⡀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⠟⠛⠀⠃⠀⠁⠀⠈⠄⡑⣈⢦⣽⣾⣿⣿⣿⢿⣻⣽⣿⣿⣿⡿⣞⣳⣿⣇⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠃⠀⠀⠀⠀⠀⠀⡄⣶⣜⣶⣿⣿⣿⠻⣝⡷⣿⣟⣿⣿⣿⣿⡿⣽⣏⡷⣿⣿⡄⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠠⡴⠶⠟⠊⠔⣰⠿⠏⠱⣈⠻⣼⣿⣿⢾⣿⣿⣿⣿⣽⣳⢾⣽⣿⣿⣿⡄⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠷⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠈⠀⠀⠀⠡⣀⣻⣿⣿⣯⣿⣿⣿⣿⡷⣯⣟⡿⣾⣿⣿⣿⣷⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡃⠘⢿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣶⣿⣿⣟⣷⣿⣿⣿⣿⣽⣳⣯⣿⣿⣿⣿⣿⣿⡄\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢿⣇⠀⠈⢿⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣼⣿⣿⢿⡼⣿⣿⣿⣿⢧⣏⣿⣹⣿⣿⣿⣿⣿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⢤⣦⣼⣿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀⠀⢢⣿⣿⡿⣯⣟⣿⣿⣿⣿⣟⡿⣾⣟⣿⣿⣿⣿⣿⢿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠠⠌⠻⣿⣿⣆⠀⠀⠀⠤⡀⠀⢀⠠⠀⡀⢀⠠⢄⣧⣿⣿⣿⣟⡷⣿⣻⣿⣿⣿⣽⣻⡷⣿⣿⣿⣿⣿⡿⣿⣿⡇\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠄⢃⠐⡀⠻⣿⣧⣄⠀⠀⠙⠦⣄⢂⠡⠐⡠⣚⣾⣿⣿⣿⣻⢾⣟⣿⣿⣿⣿⡷⣯⣿⣽⣿⣽⣿⣿⣿⣿⣿⣿⠃\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠈⠤⡀⠀⠐⢻⡽⠿⣷⣤⠀⠀⠀⠀⢂⠱⣰⢻⣿⣿⣟⣳⢯⣿⣾⣿⣿⣿⣿⣟⣿⣞⣷⣿⣿⣿⣿⣿⣿⣿⡿⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠈⢼⠃⠀⠀⢨⣿⣷⣌⠏⡄⠡⢌⣲⣌⠙⠤⢋⣾⡿⡽⣯⣟⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣯⣿⣿⡿⠃⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⡅⠀⠀⠀⠀⣰⣿⣿⣿⣯⡙⣿⢆⣻⣿⡆⠌⡱⢾⣱⢟⣳⣟⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠁⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣾⣿⡇⠀⠀⠀⢠⣿⣿⣿⣿⣿⣶⢡⢋⡴⣿⣿⠀⠱⣯⢇⣻⡼⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠁⠀⠀⠀\A    ⠀⠀⠀⠀⢀⣀⣤⣴⣶⣿⣿⣿⣿⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣷⣾⣷⣽⣿⠀⠣⡜⢭⣖⡻⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀\A    ⠀⣠⣶⡿⢟⣿⣿⣿⣿⣿⣿⢿⣿⡄⠀⠀⢠⣿⣿⣿⣿⡿⢿⡏⢩⠉⡉⢻⣿⡅⠣⡜⣣⢞⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀\A    ⢰⣿⣿⣿⣿⣿⠿⠛⠉⠉⠀⢸⣿⡇⣾⣄⣿⣿⣿⣿⡯⢁⠃⠌⠂⠡⠀⠈⣿⣯⠐⡥⢳⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠉⠉⠉⠉⠀⠀⠀⠀⠀⢀⣾⡿⠁⡜⣿⣿⣿⣿⡿⠃⠁⠀⠀⠀⠀⠀⠐⣿⠃⡜⡸⢧⣿⣿⣿⣿⣿⣿⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⢀⣀⣤⣤⣶⡿⢋⠀⣹⣿⣿⣿⣿⣯⣥⣤⣤⣤⣤⣤⣤⣤⣼⣿⢐⡸⣓⢯⣿⣿⣿⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⣠⣴⣶⣿⢿⣿⣿⡿⠋⢁⢂⢐⣾⡿⠁⠉⠉⠉⠉⠉⠉⠉⠉⠙⠛⠛⠻⢿⣦⣱⡹⣾⣿⣿⣿⠏⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⣾⣿⣿⢏⣠⣾⠿⠋⠀⠀⠀⣦⣿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⡶⢿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠘⢿⣿⡟⣯⣀⠀⢀⣤⣰⣾⠟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣷⣯⣾⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠘⣿⣷⣸⣿⣶⣾⣼⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⢸⣿⣻⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠙⠛⠛⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⡿⢢⢷⣿⣿⡗⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⡏⢳⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⡿⢈⠱⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣇⢀⣲⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣯⣅⣺⣿⣿⠿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\A      ⠉⠛⠛⡛⠉⠁";
+.error-art::after {
+    content: "⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ \A⣧⡀⠀⠀⠀⠉⠻⣦⣀⠀⠀⠀⠁⡀⠀⠉⠉⠁⠀⠈⢿⡀⣠⡤⠖⠛⠉⠀⠀⠀ \A⣼⣷⣄⠀⠀⠀⠀⠀⠙⠳⠦⠤⠤⠴⠶⠶⠶⠶⠶⠖⠛⠋⠁⠀⠀⠀⠀⠀⠀⣸ \A⠀⢺⣿⣦⡀⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢄⣠⣾⢯ \A⣤⣶⣮⣿⣿⡞⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣎⣴⠿⠉⠀⠀ \A⣿⣿⣿⣿⡟⡀⠀⣠⢤⣄⠀⠀⠀⠀⠀⠀⠀⢀⡤⣦⣄⠀⠀⠀⠙⣿⠀⠀⠀⠀ \A⠈⠀⠀⣿⠇⠃⠀⠻⣾⣿⠂⠀⠀⠀⠀⠀⠀⠈⠷⣿⡿⠀⠀⠀⠐⢹⡏⠀⠀⠀ \A⠀⠀⣸⣯⣤⣀⠀⠀⠀⠀⠀⠈⠛⠿⠀⠀⠀⠀⠀⠈⠀⣀⡠⣀⠀⠀⣧⠀⠀⠀ \A⠀⠀⣿⡇⠀⢹⠇⠀⠀⠀⠀⣀⣀⣀⣀⣀⠀⠀⠀⠀⢰⡇⠀⢸⡇⠀⢹⡆⠀⠀ \A⠀⠰⣿⠙⠒⠛⠀⠀⠀⠀⠀⢿⡏⠀⠀⣹⠀⠀⠀⠀⠈⠳⠲⠞⠁⠀⠀⢷⠀⠀ \A⠀⠀⠹⣧⠀⠀⠀⠀⠀⠀⠀⠈⠛⠲⠶⠛⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡆⠀ \A⠀⠀⠀⢻⡧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⣧⠀"
 }
 
 /* Player Block */
@@ -587,7 +587,8 @@ button.side-panel-button-visible {
 }
 
 .modal-header,
-.modal-footer {
+.modal-footer,
+.modal-body {
     padding: 10px;
 }
 
@@ -596,14 +597,10 @@ button.side-panel-button-visible {
 }
 
 .modal-body {
-    padding: 10px;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
 }
 
-.modal-body-button-play {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.modal-footer {
+    text-align: right;
 }
