--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -13,6 +13,16 @@ h1 {
     text-decoration-color: dodgerblue;
 }
 
+h2 {
+    font-weight: normal;
+    background-color: dodgerblue;
+    display: table;
+    color: white;
+    padding: 0.1em;
+    font-size: 1.4em;
+    transform: skewX(-5deg);
+}
+
 a {
     color: black;
     text-decoration-color: dodgerblue;
@@ -296,9 +306,9 @@ button.side-panel-button-visible {
 .game-card {
     border: 1px solid black;
     border-radius: 3px;
-    padding: 30px;
+    padding: 20px;
     margin: 5px;
-    width: 340px;
+    width: 300px;
     cursor: pointer;
     transition: all 0.2s;
 }
@@ -328,7 +338,7 @@ button.side-panel-button-visible {
     font-weight: bold;
 }
 
-.game-card-header {
+    .game-card-header {
     margin: 30px 0 0 0;
     text-align: center;
 }
@@ -405,6 +415,59 @@ button.side-panel-button-visible {
 
 .pong-players-name {
     margin: 0.5em 0 0 0;
+}
+
+/* Completed game list */
+
+.completed-game-list {
+    list-style: none;
+    padding: 0;
+}
+
+.completed-game-card {
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 5px;
+    transition: all 0.2s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.completed-game-card p {
+    margin: 0;
+}
+
+.completed-game-card:hover {
+    box-shadow: 1px 1px 5px gray;
+    transform: translate(-1px, -1px);
+}
+
+.completed-game-link {
+    text-decoration: none;
+    color: black;
+}
+
+.completed-game-link:hover {
+    color: black;
+}
+
+.completed-game-card-part {
+    display: flex;
+    align-items: center;
+}
+
+.completed-game-card-part *:not(:last-child) {
+    margin-right: 0.5em;
+}
+
+.completed-game-card-scores {
+    font-family: "Press Start 2P", sans-serif;
+}
+
+.completed-game-card-user {
+    font-weight: bold;
 }
 
 /* Completed game */
