--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -417,6 +417,12 @@ button.side-panel-button-visible {
     margin: 0.5em 0 0 0;
 }
 
+.pong-loader {
+    position: absolute;
+    width: 100%;
+    top: 40%;
+}
+
 /* Completed game list */
 
 .completed-game-list {
