--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -123,7 +123,7 @@ input[type=text] {
     padding: 0 30px;
 }
 
-/* Player Block */
+/* User Block */
 
 .user-block {
     position: relative;
@@ -162,6 +162,18 @@ input[type=text] {
     font-size: 1.8em;
     margin: 0;
     text-align: center;
+}
+
+/* Small avatar */
+
+.avatar-small {
+    background-color: lightgray;
+    box-sizing: border-box;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid dodgerblue;
+    overflow: hidden;
 }
 
 /* Spinner */
