--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -164,9 +164,15 @@ input[type=text] {
     text-align: center;
 }
 
-/* Small avatar */
+/* User Block Small */
 
-.avatar-small {
+.user-block-small {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-block-small-avatar {
     background-color: lightgray;
     box-sizing: border-box;
     width: 50px;
@@ -174,6 +180,10 @@ input[type=text] {
     border-radius: 50%;
     border: 1px solid dodgerblue;
     overflow: hidden;
+}
+
+.user-block-small-username {
+    margin: 0.5em 0 0 0;
 }
 
 /* Spinner */
@@ -488,7 +498,7 @@ button.side-panel-button-visible {
     border-radius: 3px;
     padding: 20px;
     margin: 5px;
-    width: 300px;
+    width: 400px;
     cursor: pointer;
     transition: all 0.2s;
 }
@@ -504,22 +514,21 @@ button.side-panel-button-visible {
 }
 
 .game-card-part {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .game-card-score {
     font-family: "Press Start 2P", sans-serif;
     font-size: 30px;
-    margin: 0 0 10px;
+    min-width: 100px;
+    text-align: center;
+    margin: 0.5em 0 0 0;
 }
 
-.game-card-player {
-    margin: 0;
-    font-weight: bold;
-}
-
-    .game-card-header {
-    margin: 30px 0 0 0;
+.game-card-header {
+    margin: 0.5em 0 0 0;
     text-align: center;
 }
 
@@ -587,14 +596,6 @@ button.side-panel-button-visible {
 
 .pong-players-part.current {
     background-color: #dddddd;
-}
-
-.pong-players-part.current .pong-players-name {
-    font-weight: bold;
-}
-
-.pong-players-name {
-    margin: 0.5em 0 0 0;
 }
 
 .pong-loader {
