--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -11,6 +11,7 @@ h1 {
     font-weight: normal;
     text-decoration: underline;
     text-decoration-color: dodgerblue;
+    margin-top: 0;
 }
 
 h2 {
@@ -119,75 +120,6 @@ input[type=text] {
     box-shadow: 1px 1px 5px 1px #cccccc;
 }
 
-.main {
-    padding: 0 30px;
-}
-
-/* User Block */
-
-.user-block {
-    position: relative;
-    width: 250px;
-}
-
-.user-block-avatar {
-    background-color: lightgray;
-    box-sizing: border-box;
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    border: 1px solid dodgerblue;
-    overflow: hidden;
-}
-
-.user-block-rank {
-    position: absolute;
-    top: 185px;
-    right: 15px;
-    margin: 0;
-    background-color: dodgerblue;
-    width: 60px;
-    height: 60px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2em;
-    border-radius: 50%;
-}
-
-.user-block-username {
-    text-decoration: underline;
-    text-decoration-color: dodgerblue;
-    font-size: 1.8em;
-    margin: 0;
-    text-align: center;
-}
-
-/* User Block Small */
-
-.user-block-small {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.user-block-small-avatar {
-    background-color: lightgray;
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid dodgerblue;
-    overflow: hidden;
-}
-
-.user-block-small-username {
-    margin: 0.5em 0 0 0;
-}
-
-/* Spinner */
-
 .loader {
     border: 16px solid #f3f3f3;
     border-top: 16px solid dodgerblue;
@@ -208,536 +140,6 @@ input[type=text] {
     }
 }
 
-.load-message {
+.loader-message {
     text-align: center;
-}
-
-/* Header */
-
-.header {
-    background-color: #000000;
-    padding: 5px 35px;
-    height: 40px;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    border-bottom: 4px solid dodgerblue;
-    box-shadow: 0 2px 8px gray;
-}
-
-.brand {
-    margin-right: 30px;
-    text-decoration: none;
-    font-weight: bold;
-    color: dodgerblue;
-    text-shadow: 0 0 5px dodgerblue;
-}
-
-.main-menu {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    height: 100%;
-}
-
-.main-menu a {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    padding: 0 1em;
-    color: lightgray;
-}
-
-.main-menu a:hover {
-    color: dodgerblue;
-    text-shadow: 0 0 5px dodgerblue;
-}
-
-.main-menu li:not(:last-child) a {
-    border-right: 1px solid #343434;
-}
-
-.container {
-    position: relative;
-    min-height: 96vh;
-    overflow: hidden;
-}
-
-/* Secondary menu */
-
-.secondary-menu {
-    background-color: #eeeeee;
-    padding: 0;
-}
-
-.secondary-menu-list {
-    list-style: none;
-    padding: 0.5em;
-    display: flex;
-    margin: 0;
-}
-
-.secondary-menu-link {
-    display: block;
-    padding: 0.5em 1em;
-}
-
-.secondary-menu-list li:not(:last-child) a {
-    border-right: 1px solid #d2d2d2;
-}
-
-/* Aside panel */
-
-.side-panel {
-    z-index: 100;
-    position: absolute;
-    border-left: 4px solid dodgerblue;
-    background-color: #eeeeee;
-    padding: 10px 20px;
-    top: 0;
-    right: -450px;
-    height: 100%;
-    width: 400px;
-    overflow-y: auto;
-    transition: right 0.5s;
-}
-
-.side-panel-visible {
-    right: 0;
-}
-
-button.side-panel-button {
-    z-index: 100;
-    position: absolute;
-    right: -38px;
-    top: 50px;
-    transform: rotate(-90deg);
-    transition: right 0.5s;
-}
-
-button.side-panel-button:active {
-    transform: rotate(-90deg) translate(0, 1px);
-}
-
-button.side-panel-button-visible {
-    right: 405px;
-}
-
-/* Modal */
-
-.modal {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 200;
-}
-
-.modal-content {
-    width: 500px;
-    background-color: #fff;
-}
-
-.modal-header,
-.modal-footer,
-.modal-body {
-    padding: 10px;
-}
-
-.modal-title {
-    margin: 0;
-}
-
-.modal-body {
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-}
-
-.modal-footer {
-    text-align: right;
-}
-
-/* User Header Block */
-
-.user-header-block {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-}
-
-.user-header-block-username {
-    margin: 0 10px 0 0;
-    color: white;
-    font-weight: bold;
-}
-
-/* Notifications */
-
-.notifications-container {
-    display: flex;
-    min-height: 60vh;
-}
-
-.notifications-section {
-    flex: 1;
-    align-items: stretch;
-}
-
-.notifications-section:not(:last-child) {
-    margin-right: 2em;
-    padding-right: 2em;
-    border-right: 1px solid lightgray;
-}
-
-.notification-list {
-    list-style: none;
-    padding: 0;
-}
-
-.notification-block {
-    border-bottom: 1px solid lightgray;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-/* Main Buttons */
-
-.main-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height: 150px;
-    padding: 2em;
-    margin: 0;
-}
-
-.main-buttons button {
-    height: 100%;
-}
-
-.main-buttons button:not(:last-child) {
-    margin-right: 5em;
-}
-
-/* User Page */
-
-.user-page-container {
-    display: flex;
-}
-
-.user-page-left-column {
-    margin-right: 1em;
-    padding: 2em 0;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
-
-.user-page-main {
-    flex: 1;
-    padding: 2em 0;
-}
-
-/* User Profile */
-
-.user-profile {
-    margin-top: 1em;
-}
-
-.user-profile-form-input {
-    margin-bottom: 1em;
-    padding-bottom: 1em;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
-}
-
-.user-profile-form-input label {
-    flex: 1;
-    text-align: right;
-    margin-right: 0.5em;
-}
-
-.user-profile-form-input input {
-    flex: 2;
-}
-
-.user-profile-form-submit {
-    display: block;
-    margin-left: auto;
-}
-
-/* Game List */
-
-.game-list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.game-card-link {
-    text-decoration: none;
-    color: black;
-}
-
-.game-card-link:hover {
-    color: black;
-}
-
-.game-card {
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 20px;
-    margin: 5px;
-    width: 400px;
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-.game-card:hover {
-    box-shadow: 1px 1px 5px gray;
-    transform: translate(-1px, -1px);
-}
-
-.game-card-scores {
-    display: flex;
-    justify-content: space-around;
-}
-
-.game-card-part {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-
-.game-card-score {
-    font-family: "Press Start 2P", sans-serif;
-    font-size: 30px;
-    min-width: 100px;
-    text-align: center;
-    margin: 0.5em 0 0 0;
-}
-
-.game-card-header {
-    margin: 0.5em 0 0 0;
-    text-align: center;
-}
-
-/* Game */
-
-.field-wrapper {
-    position: relative;
-    width: 800px;
-    height: 600px;
-}
-
-.field-wrapper .field {
-    width: 100%;
-    height: 100%;
-}
-
-.field-wrapper .score {
-    position: absolute;
-    font-family: "Press Start 2P", sans-serif;
-    font-size: 20px;
-    color: white;
-}
-
-.score.score1 {
-    top: 20px;
-    left: 25%;
-}
-
-.score.score2 {
-    top: 20px;
-    right: 25%;
-}
-
-.pong-time {
-    position: absolute;
-    color: white;
-    font-family: "Press Start 2P", sans-serif;
-    font-size: 20px;
-    bottom: 15px;
-    left: 10px;
-    margin: 0;
-}
-
-.pause-message {
-    position: absolute;
-    color: white;
-    font-family: "Press Start 2P", sans-serif;
-    top: 38%;
-    width: 100%;
-    text-align: center;
-    font-size: 1.4em;
-}
-
-.pong-players {
-    display: flex;
-}
-
-.pong-players-part {
-    padding: 1em 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.pong-players-part.current {
-    background-color: #dddddd;
-}
-
-.pong-loader {
-    position: absolute;
-    width: 100%;
-    top: 40%;
-}
-
-/* Completed game list */
-
-.completed-game-list {
-    list-style: none;
-    padding: 0;
-}
-
-.completed-game-card {
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 10px;
-    margin: 5px;
-    transition: all 0.2s;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.completed-game-card p {
-    margin: 0;
-}
-
-.completed-game-card:hover {
-    box-shadow: 1px 1px 5px gray;
-    transform: translate(-1px, -1px);
-}
-
-.completed-game-link {
-    text-decoration: none;
-    color: black;
-}
-
-.completed-game-link:hover {
-    color: black;
-}
-
-.completed-game-card-part {
-    display: flex;
-    align-items: center;
-}
-
-.completed-game-card-part *:not(:last-child) {
-    margin-right: 0.5em;
-}
-
-.completed-game-card-scores {
-    font-family: "Press Start 2P", sans-serif;
-}
-
-.completed-game-card-user {
-    font-weight: bold;
-}
-
-/* Completed game */
-
-.completed-game-scores {
-    display: flex;
-    justify-content: center;
-}
-
-.completed-game-part {
-    margin: 0 3em;
-    text-align: center;
-}
-
-.completed-game-score {
-    font-family: "Press Start 2P", sans-serif;
-    font-size: 30px;
-    margin: 1em 0 0.5em 0;
-}
-
-/* Chat */
-
-.chat {
-    margin-bottom: 1em;
-}
-
-.chat-list {
-    border: 1px solid black;
-    list-style: none;
-    padding: 1em;
-    height: 500px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    scroll-behavior: smooth;
-}
-
-.chat-message {
-    border: 2px solid rgb(189, 215, 255);
-    width: 20em;
-    padding: 1em;
-    margin: 0.5em 0;
-    border-radius: 0.5em;
-    background-color: #eeeeee;
-    box-shadow: 1px 1px 5px 1px #cccccc;
-    word-break: break-word;
-}
-
-.chat-message-my {
-    align-self: flex-end;
-}
-
-.chat-message-my .chat-message {
-    background-color: powderblue;
-}
-
-.chat-message-text {
-    margin: 0;
-}
-
-.chat-message-footer {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid gray;
-    margin: 0.5em 0 0;
-    padding-top: 0.5em;
-    font-size: 0.9em;
-    color: gray;
-}
-
-.chat-message-user {
-    margin: 0;
-    font-style: italic;
-}
-
-.chat-message-date {
-    margin: 0;
-}
-
-.chat-form {
-    display: flex;
-}
-
-.chat-form-input {
-    flex: 1;
 }
