--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -139,3 +139,12 @@ input[type=text] {
 .loader-message {
     text-align: center;
 }
+
+.key-label {
+    border: 1px solid #cccccc;
+    background-color: dodgerblue;
+    display: inline-block;
+    padding: 2px;
+    margin: 2px;
+    border-radius: 3px;
+}
